[form-builder][components] Fix checkbox boolean spacing

--- a/packages/@sanity/form-builder/src/inputs/OptionsArrayInput/styles/OptionsArrayInput.css
+++ b/packages/@sanity/form-builder/src/inputs/OptionsArrayInput/styles/OptionsArrayInput.css
@@ -8,6 +8,10 @@
   }
 }
 
+.itemVertical {
+  margin-bottom: var(--small-padding);
+}
+
 .itemWrapperHorizontal {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
